compiler-project/tests/lexer/invalid/test_number_out_of_range.src
fn main() {
    int x = 2147483648;  // too big (max is 2147483647)
    int y = -2147483649; // too small (min is -2147483648)
    return 0;
}